<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/light_gray"
              android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@color/black_bg_title"
        >

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/fragment_title_size"/>

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_rectangle"
            android:padding="15dp"
            >

            <TextView
                android:gravity="center_vertical"
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view_1"
                android:layout_alignTop="@+id/view_1"
                android:paddingRight="15dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="@dimen/content_size"/>

            <View
                android:layout_above="@+id/divider"
                android:id="@+id/view_1"
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_toRightOf="@id/tv_username"
                android:background="@color/divider"/>

            <EditText
                android:gravity="center_vertical"
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/view_1"
                android:layout_alignBottom="@+id/view_1"
                android:layout_alignTop="@+id/view_1"
                android:background="@null"
                android:hint="@string/hint_tel"
                android:textSize="@dimen/content_size"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:text=""
                />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:background="@color/divider"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:gravity="center_vertical"
                android:id="@+id/tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view_2"
                android:layout_alignTop="@+id/view_2"
                android:paddingRight="15dp"
                android:text="@string/pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/content_size"/>

            <View
                android:id="@+id/view_2"
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_alignLeft="@id/view_1"
                android:layout_below="@id/divider"
                android:layout_toRightOf="@id/tv_pwd"
                android:background="@color/divider"/>

            <EditText
                android:gravity="center_vertical"
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_toRightOf="@+id/view_2"
                android:background="@null"
                android:textSize="@dimen/content_size"
                android:hint="@string/hint_pwd"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                />


        </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/no_order_btn"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/tv_login"
            android:layout_below="@id/tv_login"
            android:padding="5dp"
            android:text="@string/forget_pwd"
            android:textSize="@dimen/content_size"
            android:textColor="@color/black"/>
    </RelativeLayout>
    </LinearLayout>

</LinearLayout>
