<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity">

    <com.htlc.cjwl.widget.CancelSlideViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.htlc.cjwl.widget.CancelSlideViewPager>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_tab_height_plus"
        android:background="@android:color/transparent">
        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_tab_height"
            android:background="@color/black_bg_tab"/>
        <ImageView
            android:id="@+id/iv_tab1"
            android:layout_above="@+id/tv_tab1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_fragment_tab_normal"
         />
        <TextView
            android:id="@+id/tv_tab1"
            android:layout_alignLeft="@id/iv_tab1"
            android:layout_alignRight="@id/iv_tab1"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_name"
            android:layout_alignParentBottom="true"
            android:textSize="12sp"
            android:textColor="@drawable/white_blue_color_selector"/>


        <ImageView
            android:layout_toRightOf="@id/iv_tab1"
            android:id="@+id/iv_tab2"
            android:layout_above="@+id/tv_tab2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orders_fragment_tab_normal"
          />
        <TextView
            android:id="@+id/tv_tab2"
            android:layout_alignLeft="@id/iv_tab2"
            android:layout_alignRight="@id/iv_tab2"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_fragment_name"
            android:layout_alignParentBottom="true"
            android:textSize="12sp"
            android:textColor="@drawable/white_blue_color_selector"/>


        <ImageView
            android:layout_toRightOf="@id/iv_tab2"
            android:id="@+id/iv_tab3"
            android:layout_above="@+id/tv_tab3"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="38dp"
            android:layout_height="36dp"
            android:src="@drawable/service_fragment_tab_normal"
            />
        <TextView
            android:id="@+id/tv_tab3"
            android:layout_alignLeft="@id/iv_tab3"
            android:layout_alignRight="@id/iv_tab3"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_fragment_name"
            android:layout_alignParentBottom="true"
            android:textSize="12sp"
            android:textColor="@drawable/white_blue_color_selector"/>

        <ImageView
            android:layout_toRightOf="@id/iv_tab3"
            android:id="@+id/iv_tab4"
            android:layout_above="@+id/tv_tab4"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/my_fragment_tab_normal"
            />
        <TextView
            android:id="@+id/tv_tab4"
            android:layout_alignLeft="@id/iv_tab4"
            android:layout_alignRight="@id/iv_tab4"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_fragment_name"
            android:layout_alignParentBottom="true"
            android:textSize="12sp"
            android:textColor="@drawable/white_blue_color_selector"/>
    </RelativeLayout>
</RelativeLayout>
