<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <include layout="@layout/layout_back_title" />

    <LinearLayout
        android:id="@+id/ll_insurance_car_mod"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/my_item_bg"
        android:orientation="horizontal"
>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:text="车型"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="大型SUV"
            android:textColor="@color/blue"
            android:layout_marginRight="17dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stander_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_insurance_car"
            android:gravity="center"
            android:text="@string/ordinary_cars"/>

        <TextView
            android:id="@+id/tv_stander_suv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@drawable/hot_city_btn_selecter"
            android:gravity="center"
            android:text="@string/stander_suv" />

        <TextView
            android:id="@+id/tv_big_suv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@drawable/hot_city_btn_selecter"
            android:gravity="center"
            android:text="@string/big_suv" />

        <TextView
            android:id="@+id/tv_other_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:background="@drawable/hot_city_btn_selecter"
            android:gravity="center"
            android:text="@string/other_car" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_insurance_year"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/my_item_bg"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="年份"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"
            android:layout_marginRight="17dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_insurance_price"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:background="@drawable/my_item_bg"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_weight="1"
            android:text="价值"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="¥12345"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:layout_marginRight="17dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/no_order_btn"
        android:gravity="center"
        android:text="确定"

        android:textColor="@color/black"
        android:textSize="14sp" />
</LinearLayout>